# translate-ts-file

./: LICENSE  README.md  main.py  pyproject.toml
